footer- filter overlap issue

--- a/src/app/client/src/app/modules/public/module/events/components/event-view-type/event-view-type.component.scss
+++ b/src/app/client/src/app/modules/public/module/events/components/event-view-type/event-view-type.component.scss
@@ -22,3 +22,6 @@
 .showDate{
   font-size: 13px !important;
 }
+.z-index-9{
+  z-index: 9 !important;
+}
